@@ -130,6 +130,7 @@ XXXX - YYY
 - Added INI option BeepWhenDone=false to beep and notify used when optimization is complete (Special).
 - Added .GALLERY, .GALLERYCOLLECTION, .GALLERYITEM, .INK, .NBK, .NOTEBOOK and *.XNK file extensions to the ZIP tool chain (maadjordan).
 - Better handling of obsolete .INI preferences.
+- Improved alternate colors in grid to look better on different Windows color schemes.
 - Fixed wrong percentage calculation for big files due to integer overflow (Dmitry, Juan).
 - Fixed grid column sorting not working properly for certain types (Nico919).
 - Updated libwebp to 0.4.3 RC1.
